# llm-tui

./: .envrc  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.config/: config.json5
.github/workflows/: cd.yml
.prompt/: system.md
docs/: README.md
docs/notes/: README.md  async-move.md  impl-blocks.md  into-trait.md  option-map.md  ownership.md  result-map-unwrap.md  rust-cheatsheet.md  rust-ratatui-study-notes.md  self-vs-this.md  srp-system-prompt-ownership.md  temporary-borrow.md  what-is-trait.md
docs/reference/: claude-code-core-prompt.md
docs/tutorials/: 00-local-llm-preparation.md  01-chat-component.md  02a-llm-preparation.md  02b-send-message.md  02c-streaming-llm.md  02d-display-response.md  03-memory-context.md  04-cursor-and-multiline.md  05-refactoring-chat.md  06-system-prompt-assembly.md  07-app-vs-chat-system-prompt.md  08-rust-testing-basics.md  09-testing-existing-codebase.md  10-model-config.md
src/: action.rs  app.rs  components.rs  config.rs  errors.rs  llm.rs  logging.rs  main.rs  message.rs  model_config.rs  prompt.rs  utils.rs
src/components/: chat.rs
src/components/chat/: conversation.rs  input.rs  mod.rs
